main.tf
# Configure the AWS Provider
provider "aws" {
  region = "us-east-2"  # Set AWS region to US East 1 (N. Virginia)
}

# Local variables block for configuration values
locals {
    aws_key = "MB_GAME_PC"   # SSH
}
resource "aws_instance" "my_server" {
   ami           = data.aws_ami.amazonlinux.id  # Use the AMI ID from the data source
   instance_type = var.instance_type            # Use the instance type from variables
   key_name      = "${local.aws_key}"          # Specify the SSH key pair name
  
   # Add tags to the EC2 instance for identification
   tags = {
     Name = "my ec2"
   }

   user_data = file("wp_install.sh")	# Specify wp installation script                  
   security_groups = [aws_security_group.allow_http_ssh.name] # Security group for http access
}
