security_group.tf
resource "aws_security_group" "allow_http_ssh" {
	name		= "allow_http"
	description	= "Allow http inbound traffic"

	ingress {
		description = "http"
		from_port = 80
		to_port = 80
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	ingress {
		description = "ssh"
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	egress {
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
	}

	tags = {
		Name = "allow_http_ssh"
	}
}
